@@ -1,3 +1,9 @@
+2001-09-17  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/tc-sh.c (md_pcrel_from_section): Transformed from
+	md_pcrel_from.  Handle pc-relativeness against link-time
+	symbol.  Handle relativeness to elsewhere than the fixup.
+
 2001-09-30  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* Makefile.am: Update dependencies with "make dep-am".
